# rust-gql-sample

./: .env.example  README.md  docker-compose.yml
backend/: Cargo.toml
backend/gql/: Cargo.toml
backend/gql/src/: lib.rs  loader.rs  schema.rs
backend/gql/src/building/: mod.rs
backend/gql/src/note/: mod.rs
backend/gql/src/user/: mod.rs
backend/middleware/: Cargo.toml
backend/middleware/src/: lib.rs  user_auth.rs
backend/migrations/: 20230521115940_add_note.up.sql
backend/sql/: Cargo.toml
backend/sql/src/: lib.rs
backend/sql/src/buildings/: mod.rs
backend/sql/src/note/: mod.rs
backend/sql/src/user/: mod.rs
backend/src/: main.rs
migrations/: 20230521084518_init.up.sql  20230521115900_init.up.sql  20230522074415_add_buildings.down.sql  20230522074415_add_buildings.up.sql
