[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-service = "2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }

sample_sql = { path = "../sql" }