[package]
name = "sample_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
  "json",
  "mysql",
  "runtime-actix-native-tls",
  "chrono",
  "macros",
  "decimal",
] }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.26", features = ["macros"] }
